# price-tracker_v2

./: .gitignore  MySQL Local.session.sql  __init__.py  product_data.json  pyproject.toml  save-to-file.py  scraper.py  update-database.py
app/: routes.py  save-to-file.py  scraper.py  update-database.py
my_env/: pyvenv.cfg
my_env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
